# beets-id3extract

./: LICENSE  README.md  pyproject.toml  setup.py
beetsplug/: id3extract.py
id3extract/: id3extract.py
