[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "beets-id3extract"
dynamic = ["version"]
description = "Beets plugin to map arbitrary ID3 tags to beets custom fields"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Brian Cotton", email = "bcotton@posteo.net"},
]
classifiers = [
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Players :: MP3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "beets>=1.6.0",
    "mediafile",
    "mutagen",
]

[project.urls]
Homepage = "https://github.com/your-username/beets-id3extract"
Repository = "https://github.com/your-username/beets-id3extract.git"